--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
   "dependencies": {
     "@convex-dev/r2": "^0.6.2",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.24.8",
+    "fluent-convex": "^0.12.3",
     "framer-motion": "^12.18.1",
     "jimp": "^1.6.0",
-    "lucide-react": "^0.522.0",
-    "motion": "^12.18.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
+    "type-route": "^1.1.0"
   },
   "devDependencies": {
     "@edge-runtime/vm": "^5.0.0",
